<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UG Buddy</string>
    <string name="menu_settings">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="default_desc">img</string>
    <string name="default_texbox_desc"></string>
    <string name="search_text">Search</string>
    <string name="search_hint">Search List ..</string>
    <string name="search_location_hint">location</string>
    <string name="default_page_name">DashBoard</string>
    <string name="default_nav_msg">No results found.</string>
    <string name="default_dashboard_item_name">Transport</string>
    <string name="default_dashboard_item_tagline">Find?</string>
    <string name="title_dashboardUI">UG Buddy</string>
    <string name="main_search_text_hint">Search</string>
    <string name="advanced_search_btn_text">Search</string>
    <string name="advanced_cancel_btn_text">Cancel</string>
    <string name="default_listing_name">XXXXX</string>
    <string name="transport_listing_nav_name">Transport</string>
    <string name="home_page_title">Home</string>
    <string name="transport_listing_page_title">Transport :: Listing</string>
    <string name="default_tel_nos">(+256) 410235684, 778425698</string>
    <string name="default_buddy_name">Air Uganda</string>
    <string name="default_buddy_url">www.air-uganda.com</string>
    <string name="default_buddy_tagline">Experience the best flight ever</string>
    <string name="default_buddy_email">info@air-uganda.com</string>
    <string name="default_buddy_district">Kampala</string>
    <string name="default_buddy_page_title">:: Buddy</string>
    <string name="main_buddy_page_title">Dashboard</string>
    <string name="title_activity_listing">Listing</string>
    <string name="default_details_address_text">Address</string>
    <string name="title_activity_name">UG Buddy</string>
    <string name="default_email_subject_text">Subject:</string>
    <string name="default_email_text">Message</string>
    <string name="email_send_btn_text">Send</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="search_tip">Separate key words with a space.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_update_ui">UpdateUI</string>
	<string name="download_text">Downloading, please wait..</string>
	<string name="progress_text">Progress: 0%</string>
	<string name="download_button_text">Start</string>
	
</resources>