<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUI" >

    <LinearLayout
        android:id="@+id/banner_dv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/header_layout" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_dv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner_dv"
        android:background="@drawable/navigation_bg"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/page_title_dv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:background="@null" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/main_buddy_page_title"
                android:textColor="@color/nav_font_color" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressbar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/nav_dv"
        android:background="@null"
        android:orientation="vertical" >

        <Button
            android:id="@+id/downloadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_button_text" />

        <ProgressBar
            android:id="@+id/pb_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip" />

        <TextView
            android:id="@+id/loadingtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:text="@string/download_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:shadowColor="#000000"
            android:shadowDx="2.0"
            android:shadowDy="2.0"
            android:shadowRadius="3.0"
            android:text="@string/progress_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

    </LinearLayout>

</RelativeLayout>