<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inner_banner_dv"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:background="@drawable/banner_bg"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/logo_searchbox_dv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_bg" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="3dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/search_text_icon_dv"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:layout_toRightOf="@id/logo"
            android:background="@drawable/banner_bg"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/search_box_dv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/banner_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/search_dv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/banner_bg"
                    android:orientation="horizontal"
                    android:weightSum="1" >

                    <EditText
                        android:id="@+id/search_box"
                        android:layout_width="0dip"
                        android:layout_height="35dp"
                        android:layout_weight=".55"
                        android:background="@color/search_box_bg"
                        android:hint="@string/search_hint"
                        android:maxLines="1"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/search_btn_dv"
                        style="@android:style/Widget.Button.Inset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/search_btn"
                        android:contentDescription="@string/default_desc" />
                </LinearLayout>

                <TextView
                    android:id="@+id/msg_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_nav_msg"
                    android:textColor="@color/nav_msg_font_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_icon_dv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:weightSum="1" >

                <ImageButton
                    android:id="@+id/home_btn"
                    style="@style/ActionbarButton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/nav_button_selector"
                    android:contentDescription="@string/default_desc"
                    android:src="@drawable/home" />

                <ImageButton
                    android:id="@+id/advanced_search_btn"
                    style="@style/ActionbarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/nav_button_selector"
                    android:contentDescription="@string/default_desc"
                    android:src="@drawable/quick_search" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>